internal/gatewayapi/testdata/securitypolicy-with-oidc-and-jwt-passthrough.in.yaml
secrets:
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: envoy-gateway
    name: client-secret-1
  data:
    client-secret: Y2xpZW50MTpzZWNyZXQK
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: envoy-gateway-system
    name: envoy-oidc-hmac
  data:
    hmac-secret: qrOYACHXoe7UEDI/raOjNSx+Z9ufXSc/22C3T6X/zPY=
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: security-policy-1
    uid: b8284d0f-de82-4c65-b204-96a0d3f258a1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
    oidc:
      provider:
        issuer: "https://oauth.foo.com"
        authorizationEndpoint: "https://oauth.foo.com/oauth2/v2/auth"
        tokenEndpoint: "https://oauth.foo.com/token"
      clientID: "client.oauth.foo.com"
      clientSecret:
        name: "client-secret-1"
      redirectURL: "https://www.example.com/oauth2/callback"
      passThroughAuthHeader: true
    jwt:
      providers:
      - name: example1
        issuer: https://oauth.foo.com
        remoteJWKS:
          uri: https://oauth.foo.com/jwt/public-key/jwks.json
